--- a/TM.RestHour/Views/CrewHealth/PatientDetails.cshtml
+++ b/TM.RestHour/Views/CrewHealth/PatientDetails.cshtml
@@ -68,6 +68,23 @@
 
             @Html.Partial("_pvPatientDetails")
 
+            <div class="row" style="border: 1px solid #eee; padding: 10px;">
+
+                <div class="col-md-4">
+                    <div class="col-md-3" style="padding: 10px; margin-top:68px;">
+                        <button type="button" class="button1" id="btnAdd" onclick="return SaveCIRM('CIRM');">Add</button>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="Email"></label>
+                        <input type="text" class="form-control" style="width:90%;" id="Email" placeholder="Enter the Email for Doctors / Hospitals" />
+                    </div>
+                    <button type="button" class="button1" id="" onclick="SendMail()">Send</button>
+                </div>
+
+            </div>
         </div>
     </div>
 </body>
