--- a/TM.RestHour/Views/MedicalAssistance/MediVac.cshtml
+++ b/TM.RestHour/Views/MedicalAssistance/MediVac.cshtml
@@ -3,6 +3,8 @@
     ViewBag.Title = "MediVac";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<script src="~/Scripts/VesselDetails.js"></script>
+<script src="~/Scripts/CIRM.js"></script>
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="../css/bootstrap.min.css" />
@@ -11,7 +13,15 @@
 <link rel="stylesheet" href="../css/style.css" />
 <link rel="stylesheet" href="../css/colors/default.css" id="colorSkinCSS">
 
+<link href="~/Content/DataTables/css/jquery.dataTables.min.css" rel="stylesheet" />
+<link href="~/Content/DataTables/css/select.dataTables.min.css" rel="stylesheet" />
+<link href="~/Content/DataTables/css/rowReorder.dataTables.min.css" rel="stylesheet" />
+<link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
 <link href="dist/dual-listbox.css" rel="stylesheet">
+
+<link href="~/Content/themes/base/datepicker.css" rel="stylesheet" />
+<link href="~/Content/plugin/datepicker/datepicker.css" rel="stylesheet" />
+<link href="~/Content/plugin/datepicker/css/pickmeup.css" rel="stylesheet" />
 
 <script src="~/Scripts/jquery-3.6.0.min.js"></script>
 <script src="~/Scripts/notify.min.js"></script>
@@ -24,59 +34,130 @@
 
 
 
-
-
-
-
-
 <div class="">
     <ul class="container--tabs">
-        <li class="tab tabs--active">Vessel Deatils</li>
-        <li class="tab">Voyage Deatils</li>
-        <li class="tab">Weather Deatils</li>
-        <li class="tab">Patient Deatils</li>
+        <li class="tab tabs--active">Vessel Details</li>
+        <li class="tab">Voyage Details</li>
+        <li class="tab">Weather Details</li>
+        <li class="tab">Patient Details</li>
     </ul>
 
     <div class="container--content">
         <div class="content content--active card">
             @*<h1>This is tab 1</h1>*@
-            @Html.Partial("~/Views/MedicalAssistance/MediVac_VesselDeatils.cshtml")
+            @*@Html.Partial("~/Views/MedicalAssistance/MediVac_VesselDeatils.cshtml")*@
+            @Html.Partial("_pvVesselDetails")
+
 
         </div>
 
         <div class="content">
             @*<h1>This is tab 2</h1>*@
-            @Html.Partial("~/Views/MedicalAssistance/MediVac_VoyageDeatils.cshtml")
+            @*@Html.Partial("~/Views/MedicalAssistance/MediVac_VoyageDeatils.cshtml")*@
+
+            @Html.Partial("_pvVoyageDetails")
         </div>
 
         <div class="content">
             @*<h1>This is tab 3</h1>*@
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur doloribus necessitatibus possimus. Sapiente aspernatur neque atque in eum tenetur id!</p>
+            @Html.Partial("_pvWeatherDetails")
         </div>
 
         <div class="content">
             @*<h1>This is tab 4</h1>*@
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur doloribus necessitatibus possimus. Sapiente aspernatur neque atque in eum tenetur id!</p>
+            @Html.Partial("_pvPatientDetails")
+
+
+            <div class="row" style="border: 1px solid #eee; padding: 10px;">
+
+                <div class="col-md-4">
+                    <div class="col-md-3" style="padding: 10px; margin-top:68px;">
+                        <button type="button" class="button1" id="btnAdd" onclick="return SaveCIRM('Medivac');">Add</button>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="Email"></label>
+                        <input type="text" class="form-control" style="width:90%;" id="Email" placeholder="Enter the Email for Doctors / Hospitals" />
+                    </div>
+                    <button type="button" class="button1" id="" onclick="SendMail()">Send</button>
+                </div>
+
+            </div>
         </div>
 
     </div>
 </div>
+@section Scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jqueryui")
+    @Styles.Render("~/Content/themes/base/css")
 
-<script>
-    const tabs = document.querySelectorAll(".tab");
-    const contents = document.querySelectorAll(".content");
+    <script>
+        const tabs = document.querySelectorAll(".tab");
+        const contents = document.querySelectorAll(".content");
 
-    for (let i = 0; i < tabs.length; i++) {
-        tabs[i].addEventListener("click", () => {
-            for (let j = 0; j < contents.length; j++) {
-                contents[j].classList.remove("content--active");
-            }
-            for (let jj = 0; jj < tabs.length; jj++) {
-                tabs[jj].classList.remove("tabs--active");
-            }
-            contents[i].classList.add("content--active");
-            tabs[i].classList.add("tabs--active");
+        for (let i = 0; i < tabs.length; i++) {
+            tabs[i].addEventListener("click", () => {
+                for (let j = 0; j < contents.length; j++) {
+                    contents[j].classList.remove("content--active");
+                }
+                for (let jj = 0; jj < tabs.length; jj++) {
+                    tabs[jj].classList.remove("tabs--active");
+                }
+                contents[i].classList.add("content--active");
+                tabs[i].classList.add("tabs--active");
+            });
+        }
+
+        $(document).ready(function () {
+
+            //-------Added On 4th Jan 2022-------------------------------
+            GetVesselTypeForDrp();
+            GetShip();
+            //$('#VesselTypeID').on('change', function () {
+            //    //alert($('option:selected', this).text());
+
+            //    var VesselTypeID = $('#VesselTypeID').val();
+            //    console.log('hi');
+            //    console.log(VesselTypeID);
+
+            //    GetVesselSubTypeByVesselTypeIDForDrp(VesselTypeID);
+            //});
+
+            //$('#VesselSubTypeID').on('change', function () {
+            //    //alert($('option:selected', this).text());
+
+            //    var VesselSubTypeID = $('#VesselSubTypeID').val();
+            //    //console.log('hi');
+            //    //console.log(VesselSubTypeID);
+
+            //    GetVesselSubSubTypeByVesselSubTypeIDForDrp(VesselSubTypeID);
+
+            //});
+            //----End---Added On 4th Jan 2022-------------------------------
+
+            //SetUpGrid();
+            //GetCrewForCIRMPatientDetails();
+
+            document.getElementById("Nationality").disabled = true;
+            document.getElementById("ddlRank").disabled = true;
+
+            $('#FrequencyOfVomiting').hide();
+            $('#FrequencyOfFits').hide();
+            $('#FrequencyOfGiddiness').hide();
+            $('#FrequencyOfLethargy').hide();
+
+            $('#btnUploadJoiningMedical').hide();
+            $('#btnMedicineAvailableOnBoard').hide();
+            $('#btnMedicalEquipmentOnBoard').hide();
+            $('#btnMedicalHistoryUpload').hide();
+            $('#btnWorkAndRestHourLatestRecord').hide();
+            $('#btnPreExistingMedicationPrescription').hide();
+            $('#btnUploadPistures').hide();
         });
-    }
+    </script>
 
-</script>
+}
