--- a/TM.RestHour/Views/Shared/_pvPatientDetails.cshtml
+++ b/TM.RestHour/Views/Shared/_pvPatientDetails.cshtml
@@ -1,23 +1,34 @@
 ﻿
 @model TM.RestHour.Models.CrewTimesheetViewModel
-@Html.Hidden("SaveCIRM", @Url.Action("SaveCIRM", "CrewHealth"))
-@Html.Hidden("SaveCIRMVitalParams", @Url.Action("SaveCIRMVitalParams", "CrewHealth"))
-@Html.Hidden("SaveCIRMSymtomology", @Url.Action("SaveCIRMSymtomology", "CrewHealth"))
+@*@Html.Hidden("SaveCIRM", @Url.Action("SaveCIRM", "CrewHealth"))*@
+@*@Html.Hidden("SaveCIRMVitalParams", @Url.Action("SaveCIRMVitalParams", "CrewHealth"))*@
+@*@Html.Hidden("SaveCIRMSymtomology", @Url.Action("SaveCIRMSymtomology", "CrewHealth"))*@
 @Html.Hidden("getCrewForCIRMPatientDetails", @Url.Action("GetCrewForCIRMPatientDetails", "CrewHealth"))
-@Html.Hidden("showCIRMVitalParams", @Url.Action("LoadCIRMVitalParamsData", "CrewHealth"))
-@Html.Hidden("showCIRMSymtomology", @Url.Action("LoadCIRMSymtomologyData", "CrewHealth"))
+@*@Html.Hidden("showCIRMVitalParams", @Url.Action("LoadCIRMVitalParamsData", "CrewHealth"))*@
+@*@Html.Hidden("showCIRMSymtomology", @Url.Action("LoadCIRMSymtomologyData", "CrewHealth"))*@
 
 @*@Html.Hidden("uploadPistures", @Url.Action("UploadPistures", "CrewHealth"))*@
 
 
-@Html.Hidden("getCrewForCIRMPatientDetailsByCrew", @Url.Action("GetCrewForCIRMPatientDetailsByCrew", "CrewHealth"))
-@Html.Hidden("getCIRMDetailsByCrew", @Url.Action("GetCIRMPatientDetailsByCrew", "CrewHealth"))
+@*@Html.Hidden("getCrewForCIRMPatientDetailsByCrew", @Url.Action("GetCrewForCIRMPatientDetailsByCrew", "CrewHealth"))*@
+@*@Html.Hidden("getCIRMDetailsByCrew", @Url.Action("GetCIRMPatientDetailsByCrew", "CrewHealth"))*@
+
+
+@Html.Hidden("myUrlNew", @Url.Action("GetShipByID", "Vessel"))
+@Html.Hidden("SaveCIRM", @Url.Action("SaveCIRM", "MedicalAssistance"))
+@Html.Hidden("SaveCIRMVitalParams", @Url.Action("SaveCIRMVitalParams", "MedicalAssistance"))
+@Html.Hidden("SaveCIRMSymtomology", @Url.Action("SaveCIRMSymtomology", "MedicalAssistance"))
+@Html.Hidden("showCIRMVitalParams", @Url.Action("LoadCIRMVitalParamsData", "MedicalAssistance"))
+@Html.Hidden("showCIRMSymtomology", @Url.Action("LoadCIRMSymtomologyData", "MedicalAssistance"))
+@Html.Hidden("getCrewForCIRMPatientDetailsByCrew", @Url.Action("GetCrewForCIRMPatientDetailsByCrew", "MedicalAssistance"))
+@Html.Hidden("getCIRMDetailsByCrew", @Url.Action("GetCIRMPatientDetailsByCrew", "MedicalAssistance"))
 
 
 
 <div class="clearfix"></div>
 <div class="row" style="border: 1px solid #eee; padding: 10px;">
-    <h4>Petient Details </h4>
+   <div class="col-md-12"><h4>Petient Details </h4></div>
+    
 
     <div class="col-md-3">
         <img src="~/background/HumanBody.jpg" style="width: 100%; float: right;" />
@@ -91,7 +102,8 @@
 </div>
 
 <div class="row" style="border: 1px solid #eee; padding: 10px;">
-    <h4>Type of Ailment </h4>
+    <div class="col-md-12"><h4>Type of Ailment </h4></div>
+    
     <div class="col-md-4">
         <div class="form-group">
             <label for="Category">Category</label>
@@ -108,6 +120,8 @@
 
 </div>
 
+
+
 <div class="row" style="border: 1px solid #eee; padding: 10px;">
     <div class="col-md-12">
         <div class="col-md-9">
@@ -120,9 +134,6 @@
             <button type="button" class="button1" onclick="return loadCIRMVitalParamsData();" id="btnShowVitalParams">View</button>
         </div>
     </div>
-
-
-
     <div class="col-md-4">
         <div class="form-group">
             <label for="ObservedDateAndTime">Observed Date And Time</label>
@@ -183,19 +194,15 @@
 
 
         <div class="form-group" style="width: 100%;">
-            <label for="OxygenSaturation">Oxygen Saturation/SpO2</label> &nbsp; <b />
-            <input type="image" src="~/background/iBtn.png" alt="Submit" width="15" height="15" data-toggle="modal" data-target="#myModalForSPO2">
+            <label for="OxygenSaturation">Oxygen Saturation/SpO2</label> &nbsp; 
+            <input type="image" src="~/background/iBtn.png" alt="Submit" width="15" height="15" data-toggle="modal" data-target="#myModalForSPO2" />
             <input type="text" class="form-control" id="OxygenSaturation" placeholder="Oxygen Saturation/SpO2" />
         </div>
-
 
         <div class="form-group" style="width: 100%;">
             <label for="Creatinine">Creatinine</label>
             <input type="text" class="form-control" id="Creatinine" placeholder="Creatinine" />
         </div>
-
-
-
 
         <div class="form-group" style="width: 100%;">
             &nbsp; &nbsp; &nbsp;
@@ -215,7 +222,6 @@
             </div>
         </div>
     </div>
-
     <div class="col-md-4">
         <div class="form-group" style="width: 100%;">
             <label for="Pulse">Pulse (Beats/Minute)</label>
@@ -250,7 +256,6 @@
             </div>
         </div>
     </div>
-
     <div class="col-md-4">
 
         <div class="form-group" style="width: 100%;">
@@ -261,7 +266,7 @@
             &nbsp; &nbsp; &nbsp;
         </div>
         <div class="form-group" style="width: 100%;">
-            <label for="Temperature">Temperature</label> &nbsp; <b />
+            <label for="Temperature">Temperature</label> &nbsp; 
             <input type="text" class="form-control" id="Temperature" placeholder="Temperature" />
         </div>
     </div>
@@ -312,13 +317,14 @@
             <button type="button" class="button1" onclick="return SaveCIRMSymtomology();" id="btnAddSytomology">Add</button>
             <button type="button" class="button1" onclick=" return loadCIRMSymtomologyData();" id="btnShowSymtomology">View</button>
         </div>
+        <div class="form-group" style="width: 100%;">
+            &nbsp; &nbsp; &nbsp;
+        </div>
+
+        <h4>Symptomology </h4>
     </div>
 
-    <div class="form-group" style="width: 100%;">
-        &nbsp; &nbsp; &nbsp;
-    </div>
-
-    <h4>Symptomology </h4>
+    
     <div class="col-md-6">
         <div class="form-group">
             <label for="ObservedDateAndTime">Observed Date And Time</label>
@@ -490,7 +496,8 @@
 <div class="clearfix"></div>
 @*-----Added On 4th Jan 2022-------------------------------*@
 <div class="row" style="border: 1px solid #eee; padding: 10px;">
-    <h4>Past Medical History </h4>
+    <div class="col-md-12"><h4>Past Medical History </h4></div>
+    
 
     <div class="col-md-4" style="border: 1px solid #eee; padding: 10px;">
 
@@ -551,7 +558,8 @@
 
 
 <div class="row" style="border: 1px solid #eee; padding: 10px;">
-    <h4>In Case of Accident occured</h4>
+    <div class="col-md-12"><h4>In Case of Accident occured</h4></div>
+    
     <div class="col-md-4">
         <div class="form-group">
             <label for="WhereAndHowAccidentOccured ">Where And How Accident Occured</label>
@@ -915,31 +923,7 @@
     </div>
 </div>
 
-<div class="row" style="border: 1px solid #eee; padding: 10px;">
 
-    <div class="col-md-4">
-        <div class="col-md-3" style="padding: 10px; margin-top:68px;">
-            <button type="button" class="button1" id="btnAdd" onclick="return SaveCIRM();">Add</button>
-        </div>
-    </div>
-
-    @*<div class="col-md-4">
-            <div class="form-group">
-                <label for="Email"></label>
-                <input type="text" class="form-control" style="width:90%;" id="CirmEmail" placeholder="telesoccorso@cirm.it" disabled />
-            </div>
-            <button type="button" class="button1" id="" onclick="SendMail()">Send</button>
-        </div>*@
-
-    <div class="col-md-4">
-        <div class="form-group">
-            <label for="Email"></label>
-            <input type="text" class="form-control" style="width:90%;" id="Email" placeholder="Enter the Email for Doctors / Hospitals" />
-        </div>
-        <button type="button" class="button1" id="" onclick="SendMail()">Send</button>
-    </div>
-
-</div>
 
 
 
